# bili-search-algo

./: .gitignore  README.md  pyproject.toml
configs/: envs.json  envs.py  secrets_template.json
data_utils/: args.py  zhihu.py
data_utils/videos/: cache.py  cache.sh  convert.py  data.py  filter.py  freq.py  freq.sh  parquet.py
datasets/: args.py  zhihu.py
datasets/videos/: cache.py  cache.sh  convert.py  data.py  freq.py  freq.sh  parquet.py
debugs/: analyze_tid_shards.py  analyze_word_vocab_sample.py  sentencepiece_eval.py
debugs/coretok/: bench_stage2_materialize.py  bench_train_slice.py
debugs/owners_search/: sample_coretok_titles.py
docs/vocabs/: USAGE.md
models/: tests.py
models/bge/: finetune.py
models/coretok/: README.md  __init__.py  core.py  entity_vocab.py  pipeline.py  test_coretok.py  test_train.py  train.py
models/embedders/: eval.py  tests.py
models/fastembed/: embed.py
models/fasttext/: data.py  docvec.py  pos.py  preprocess.py  run.py  test.py  test_runner.py  train.py  train.sh  vocab.py
models/hanlp/: README.md  mtl.py  pos.py  tokenize.py
models/hftfm/: demo_parallel.py  embed.py  embed_parallel.py  tokenizers_fix.py
models/milvus/: embed.py
models/owners/: README.md  __init__.py  domain.py  profile.py  test_domain.py  test_profile.py
models/sentencepiece/: README.md  benchmark.py  convert.py  count.py  data.py  edit.py  filter.py  merge.py  (+13 more)
stats/: count.py  stat_ratios.json  stats.json
tests/: test_sentencepiece_merge.py  test_sentencepiece_vocab_filters.py  test_sentencepiece_workflow.py  test_word_eng.py
(+37 files in other folders)
